--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     min-height: 100vh;
     min-width: 100vh;
 }
+button {
+    border: none;
+}
 header {
     display: flex;
     flex-direction: row;
@@ -39,11 +42,64 @@ header .menu-bar .bx-menu {
     font-size: 20px;
 }
 
+.about-me {
+    margin: 10px;
+    margin-top:60px;
+}
 .about-me .about-content {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
-.about-me .about-content .about-image img{
-    float: right;
+.about-me .about-content .about-text {
+    width: 50%;
+}
+
+.about-me .about-content .about-text h3 {
+    padding: 5px 0;
+}
+.about-me .about-content .about-text h1 {
+    padding: 5px 0;
+    color: orangered;
+    font-size: 50px;
+}
+
+.about-me .about-content .about-text p {
+    /* background: linear-gradient(black, darkblue); */
+    padding: 15px 0;
+    /* font-size: 20px; */
+    font-style: italic;
+    line-height: 1.4;
+    color: rgb(150, 147, 147)   q;
+}
+.about-me .about-content .about-image {
+    background: linear-gradient(black, darkblue);   
+    padding: 20px;
+    border-radius: 40% 20% 70% 10%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.about-me .about-content .about-image img {
+    width: 350px;
+    height: 350px;
+}
+.about-me .about-content .about-text .buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 30px;
+}
+.about-me .about-content .about-text .buttons button {
+    padding: 10px 15px;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 40px;
+}
+.about-me .about-content .about-text .buttons .hire {
+    background-color: orangered;
+}
+.about-me .about-content .about-text .buttons .download {
+    background-color: darkblue;
 }
