--- a/style.css
+++ b/style.css
@@ -91,15 +91,62 @@ header .menu-bar .bx-menu {
     gap: 10px;
     margin-top: 30px;
 }
+.about-me .about-content .about-text .buttons {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    margin-top: 30px;
+}
 .about-me .about-content .about-text .buttons button {
     padding: 10px 15px;
     color: #fff;
     font-weight: bold;
     border-radius: 40px;
+    display: flex;
+    gap: 5px;
 }
 .about-me .about-content .about-text .buttons .hire {
     background-color: orangered;
 }
 .about-me .about-content .about-text .buttons .download {
     background-color: darkblue;
+}
+
+.skills {
+    margin: 10px;
+    margin-top: 70px;
+}
+.skills h2 {
+    text-align: center;
+    padding: 15px;
+}
+.skills .all-skills {
+    padding: 20px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10%;
+}
+.skills .all-skills .single-skill {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+.skills .all-skills .single-skill i {
+    font-size: 60px;
+}
+.skills .all-skills .single-skill .bxl-html5 {
+    background-color: orangered;
+}
+.skills .all-skills .single-skill .bxl-css3 {
+    background-color: blue;
+}
+.skills .all-skills .single-skill .bxl-javascript {
+    background-color: orange;
+    color: black;
+}
+.skills .all-skills .single-skill .bxl-php {
+    background-color: blue;
+    color: white;
 }
